--- a/src/config/language/spanish.json
+++ b/src/config/language/spanish.json
@@ -1,5 +1,6 @@
 {
     "name": "Juan Martín Esparza de la Cruz",
     "information": "Tengo 18 años, estudio en la Universidad Tecnológica de Aguascalientes, me gusta: escuchar música, ver series, entrenar, jugar video juegos y comer. Espero poder ejercer un trabajo de buena paga y que me guste.",
-    "button": "contador visita"
+    "button": "Contador visita",
+    "tecno": "Tecnologías que manejan"
 }
