--- a/src/config/language/english.json
+++ b/src/config/language/english.json
@@ -1,6 +1,8 @@
 {
     "name": "Juan Martin Esparza de la Cruz",
-    "information": "I am 18 years old, I study at the Technological University of Aguascalientes, I like: listening to music, watching series, training, playing video games and eating. I hope to be able to exercise a good paying job and that I like.",
-    "button": "Count is",
+    "information": "I am 18 years old, I study at the Technological University of Aguascalientes.",
+    "information1": "I like: listening to music, watching series, training, playing video games and eating.",
+    "information2": "I hope to be able to exercise a good paying job and that I like.",
+    "button": "Count of visit:",
     "tecno": "Technologies they handle"
 }
