--- a/src/config/language/spanish.json
+++ b/src/config/language/spanish.json
@@ -1,6 +1,8 @@
 {
     "name": "Juan Martín Esparza de la Cruz",
-    "information": "Tengo 18 años, estudio en la Universidad Tecnológica de Aguascalientes, me gusta: escuchar música, ver series, entrenar, jugar video juegos y comer. Espero poder ejercer un trabajo de buena paga y que me guste.",
-    "button": "Contador visita",
+    "information": "Tengo 18 años, estudio en la Universidad Tecnológica de Aguascalientes.",
+    "information1": "Me gusta: escuchar música, ver series, entrenar, jugar video juegos y comer.",
+    "information2": "Espero poder ejercer un trabajo de buena paga y que me guste.",
+    "button": "Contador de visita:",
     "tecno": "Tecnologías que manejan"
 }
